# YADRO_task

./: CMakeLists.txt  README.md  club.cpp  club.h  main.cpp  test.cpp
answers/: 2_spaces_test.txt  ClientUnknown_test.txt  QueueIsFull_test.txt  YouShallNotPass_test.txt  absence_of_an_insignificant_zero_test.txt  absence_of_the_name_of_client_test.txt  event_number_is_greater_than_n_test.txt  invalid_character_test.txt  no_amount_of_tables_test.txt  no_event_number_test.txt  no_event_start_time_test.txt  no_line_break_test.txt  no_price_test.txt  table_number_is_greater_than_n_test.txt  time_test.txt  wrong_time_test.txt
tests/: 2_numbers_in_the_first_line_test.txt  2_spaces_test.txt  ClientUnknown_test.txt  QueueIsFull_test.txt  YouShallNotPass_test.txt  absence_of_an_insignificant_zero_test.txt  absence_of_the_name_of_client_test.txt  event_number_is_greater_than_n_test.txt  invalid_character_test.txt  negative_cost_test.txt  negative_number_of_tables_test.txt  no_amount_of_tables_test.txt  no_end_time_test.txt  no_event_number_test.txt  no_event_start_time_test.txt  no_line_break_test.txt  no_price_test.txt  table_number_is_greater_than_n_test.txt  time_test.txt  wrong_time_test.txt
